@@ -17,31 +17,31 @@ bgcolor="#EDEDED" style="width: 100%;">
 <tbody>
 <tr>
 <td valign="middle"><a href=
-"index.html">Welcome</a><br></td>
+"index.html" target="_top">Welcome</a><br></td>
 </tr>
 <tr>
-<td valign="top"><a href="intended_audience.html">Intended
+<td valign="top"><a href="intended_audience.html" target="_top">Intended
 audience</a><br></td>
 </tr>
 <tr>
-<td valign="top"><a href="goals.html">Goals</a><br></td>
+<td valign="top"><a href="goals.html" target="_top">Goals</a><br></td>
 </tr>
 <tr>
-<td valign="top"><a href="how_you_can_help.html">How you can
+<td valign="top"><a href="how_you_can_help.html" target="_top">How you can
 help</a><br></td>
 </tr>
 <tr>
-<td valign="top"><a href="design.html">Language design</a><br></td>
+<td valign="top"><a href="design.html" target="_top">Language design</a><br></td>
 </tr>
 <tr>
-<td valign="top"><a href="tech_arch.html">Technical
+<td valign="top"><a href="tech_arch.html" target="_top">Technical
 architecture</a></td>
 </tr>
 <tr>
-<td valign="top"><a href="progress.html">Progress</a></td>
+<td valign="top"><a href="progress.html" target="_top">Progress</a></td>
 </tr>
 <tr>
-<td><a href="http://sourceforge.net/projects/jail-ust">SourceForge
+<td><a href="http://sourceforge.net/projects/jail-ust" target="_top">SourceForge
 project page</a></td>
 </tr>
 </tbody>
