@@ -18,43 +18,9 @@ width="210" height="62" border="0" align="right" alt=
 <tbody>
 <tr>
 <td style="width: 20%;" valign="top">
-<table align="left" border="1" cellspacing="0" cellpadding="8"
-bgcolor="#EDEDED" style="width: 100%;">
-<tbody>
-<tr>
-<td>
-<table style="width: 100%;" cellspacing="0" cellpadding="8">
-<tbody>
-<tr>
-<td valign="middle"><a href=
-"index.html#Welcome_to_the_JAIL_home_page.">Welcome</a><br></td>
-</tr>
-<tr>
-<td valign="top"><a href="intended_audience.html">Intended
-audience</a><br></td>
-</tr>
-<tr>
-<td valign="top"><a href="goals.html">Goals</a><br></td>
-</tr>
-<tr>
-<td valign="top"><a href="how_you_can_help.html">How you can
-help</a><br></td>
-</tr>
-<tr>
-<td valign="top"><a href="design.html">Language design</a><br></td>
-</tr>
-<tr>
-<td valign="top"><a href="tech_arch.html">Technical architecture</a></td>
-</tr>
-<tr>
-<td valign="top"><a href="progress.html">Progress</a></td>
-</tr>
-<tr>
-<td><a href="http://sourceforge.net/projects/jail-ust">SourceForge
-project page</a></td>
-</tr>
-</tbody>
-</table>
+<iframe src="table.html" type="text/html" width="20%" height="800" frameborder=0>
+<p>The TOC should be here..</p>
+</iframe>
 </td>
 </tr>
 </tbody>
