@@ -1,4 +1,15 @@
 2003-09-02	blytkerchan
+	* empty.html: set width and height of the iframe properly
+	* table.html: target _top for all links
+	* design.html: use iframe for the table
+	* goals.html: ditto
+	* how_you_can_help.html: ditto
+	* index.html: ditto
+	* intended_audience.html: ditto
+	* progress.html: ditto
+	* tech_arch.html: ditto
+
+2003-09-02	blytkerchan
 	* empty.html: use IFRAME element in stead of OBJECT
 	undo previous change (SF.NET server is down)
 
